Created character api service with  RickAndMortyApiService implementantion using DTO. Pagination logic still in progress, Currently hardcoded. Automated test is empty
